@@ -1,3 +1,11 @@
+2010-02-16  Sanel <karijes@users.sourceforge.net>
+
+	* m4/compiler-name.m4: s/ac_compiler_name/ac_compiler_vendor and
+	s/EDELIB_COMPILER_NAME/EDELIB_COMPILER_VENDOR
+	* configure.in:
+	* Jamconfig.in: there is no need to set SUN_COMPILER variable when
+	SunStudio is used, now configure script will figure it out
+
 2010-02-15  Sanel <karijes@users.sourceforge.net>
 
 	* m4/fltk.m4: check if FLTK was compiled with XFT support
